macviews: use Aura unfocused border color

The Mac unfocused border color is far lighter and looks wrong in the
MacViews Harmony UI surfaces.

Bug: 837278
Change-Id: I98807cf565e30f51ddc5486c3cc00b8cf6ae5c74
Reviewed-on: https://chromium-review.googlesource.com/1035107
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554856}
Former-commit-id: 43d9d332843d529ceef39d73f5b4d47d3536c308